# scr-platform

./: .dockerignore  .env.example  .env.production.template  .env.staging.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PERFORMANCE.md  README.md  SCR_MASTER_BLUEPRINT.md  SCR_PLATFORM_BLUEPRINT.md  SCR_PLATFORM_OVERVIEW.docx  deploy-vercel.sh  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
apps/api/: .dockerignore  DEVELOPER.md  KEY_ROTATION.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1793197fd8ed_merge_all_heads.py  394135f84e64_initial_schema_36_tables.py  4b570868cd8e_add_composite_indexes_and_unique_.py  7c4e82b31d09_patch2_expand_project_types.py  8d141fa29a9e_merge_index_and_ai_cost_branches.py  a0b1c2d3e4f5_add_data_connectors.py  a1b2c3d4e5f6_add_ai_output_feedback.py  a1b2c3d4e5f6_add_metric_snapshots.py  a4b5c6d7e8f9_add_professional_connections.py  a7b8c9d0e1f2_add_deal_stage_transitions.py  a9b8c7d6e5f4_add_metric_snapshots.py  aa1122334455_add_is_deleted_to_advisory_tables.py  aa9988776655_add_carbon_listed_status.py  b1c2d3e4f5a6_add_deal_rooms.py  b2c3d4e5f6a7_add_citations_and_lineage.py  b2c3d4e5f6a7_add_saved_searches.py  b5c6d7e8f9a0_add_document_versions.py  b9c8d7e6f5a4_add_citations_and_lineage.py  c0merge0c01c05_merge_c_series.py  c1a2b3c4d5e6_add_qa_workflow.py  c2a2b3c4d5e6_add_engagement_tracking.py  c2d3e4f5a6b7_add_watchlists.py  c3a2b3c4d5e6_add_covenant_kpi_monitoring.py  c3d4e5f6a7b8_add_investor_risk_profiles.py  c4a2b3c4d5e6_add_org_api_keys.py  c5a2b3c4d5e6_add_crm_sync.py  c6a2b3c4d5e6_add_cashflow_pacing.py  c6d7e8f9a0b1_add_fx_rates_and_currencies.py  c8a2b3c4d5e6_add_taxonomy_and_templates.py  c9d0e1f2a3b4_add_esg_metrics.py  c9merge0c06c08_merge_c06_c08.py  cb877e7100cf_add_document_classification_and_share_.py  d1a2b3c4d5e6_add_business_plans_columns.py  d3e4f5a6b7c8_add_blockchain_anchors.py  d5e6f7a8b9c0_add_prompt_templates.py  d7e8f9a0b1c2_add_meeting_briefings.py  e1a2b3c4d5e6_add_backtesting.py  e2a2b3c4d5e6_add_expert_notes.py  e2f3a4b5c6d7_add_lp_reports.py  e3a2b3c4d5e6_add_redaction_jobs.py  (+24 more)
apps/api/app/: main.py  worker.py  worker_tasks.py
apps/api/app/auth/: __init__.py  clerk_jwt.py  clerk_webhook.py  dependencies.py  rbac.py  router.py
apps/api/app/core/: ai_costs.py  celery_app.py  celery_config.py  celery_db.py  circuit_breaker.py  config.py  database.py  elasticsearch.py  errors.py  logging.py  module_discovery.py  pdf_utils.py  security.py  sentry.py
apps/api/app/middleware/: __init__.py  audit.py  correlation.py  security.py  tenant.py
apps/api/app/models/: __init__.py  advisory.py  ai.py  alley.py  api_keys.py  backtesting.py  base.py  blockchain.py  certification.py  citations.py  collaboration.py  compliance.py  comps.py  connections.py  connectors.py  core.py  crm.py  custom_domain.py  dataroom.py  deal_flow.py  deal_rooms.py  digest_log.py  doc_versions.py  document_annotations.py  due_diligence.py  engagement.py  enums.py  esg.py  expert_notes.py  external_data.py  financial.py  financial_templates.py  fx.py  gamification.py  investor_risk.py  investors.py  launch.py  legal.py  lineage.py  lp_report.py  (+18 more)
apps/api/app/modules/admin/: router.py  schemas.py  service.py
apps/api/app/modules/ai_feedback/: router.py
apps/api/app/schemas/: __init__.py  auth.py
apps/api/app/scripts/: seed_resource_ownership.py
apps/api/app/services/: ai_budget.py  analysis_cache.py  encryption.py  prompt_registry.py  response_cache.py  seed_prompts.py  token_budget.py
apps/api/app/tasks/: backup.py  benchmarks.py  blockchain.py  compliance.py  crm_sync.py  data_retention.py  external_data.py  fx_rates.py  monitoring.py  partition_manager.py  qa_sla.py  screener_notifications.py  stuck_docs.py  watchlists.py  weekly_digest.py
apps/api/scripts/: seed_ally_demo.py  seed_demo_complete.py  seed_demo_projects.py  upload_data_room.py
apps/api/tests/: conftest.py  test_advisory_enums.py  test_advisory_module.py  test_ai_integration.py  test_blockchain_audit.py  test_c01_c08.py  test_carbon_credits.py  test_carbon_credits_engine.py  test_celery_tasks.py  test_circuit_breaker.py  test_citations_service.py  test_collaboration.py  test_compliance_module.py  test_connectors.py  test_core_modules.py  test_correlation_middleware.py  test_crm_sync.py  test_custom_domain.py  test_dataroom.py  test_deal_room_module.py  test_digest.py  test_doc_versions.py  test_document_annotations.py  test_due_diligence.py  test_engagement.py  test_equity_calculator.py  test_expert_insights.py  test_financial_templates.py  test_fx.py  test_gamification.py  test_health.py  test_impact.py  test_launch.py  test_legal_module.py  test_lineage.py  test_lp_reporting.py  test_marketplace.py  test_matching_module.py  test_meeting_prep.py  test_metrics_module.py  (+31 more)
apps/api/tests/load/: README.md  locustfile.py  test_ai_latency.py  test_data_room.py
apps/api/tests/test_auth/: test_dependencies.py  test_rbac.py  test_router.py  test_tenant.py  test_webhook.py
services/ai-gateway/: .dockerignore  Dockerfile  pyproject.toml
services/ai-gateway/app/: main.py  rag.py  task_batcher.py  validation.py
services/ai-gateway/app/core/: config.py  logging.py
services/ai-gateway/app/middleware/: correlation.py
services/ai-gateway/app/routers/: completions.py  embeddings.py  feeds.py  search.py
services/ai-gateway/app/services/: auth.py  external_data.py  llm_router.py  rag.py  rate_limiter.py  token_tracker.py  vector_store.py
services/ai-gateway/tests/: test_batcher.py  test_health.py  test_rag.py  test_token_tracker.py  test_validation.py
(+655 files in other folders)
