[tool.poetry]
name = "scr-api"
version = "0.1.0"
description = "SCR Platform — FastAPI Backend"
authors = ["SCR Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.1"
httpx = "^0.28.1"
boto3 = "^1.35.86"
structlog = "^24.4.0"
python-multipart = ">=0.0.22"
elasticsearch = {extras = ["async"], version = "^8.17.0"}
tenacity = "^9.0.0"
orjson = "^3.10.12"
psycopg2-binary = "^2.9.11"
svix = "^1.86.0"
numpy-financial = "^1.0"
openpyxl = "^3.1.0"
python-pptx = "^1.0.0"
jinja2 = "^3.1.0"
python-docx = "^1.2.0"
xhtml2pdf = ">=0.2.16"
sentry-sdk = {extras = ["fastapi"], version = "^2.53.0"}

[tool.poetry.group.blockchain]
optional = true

[tool.poetry.group.blockchain.dependencies]
web3 = ">=6.0,<7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
ruff = "^0.8.4"
mypy = "^1.13.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",    # line too long — handled by formatter
  "B008",    # function-call-in-default-argument — FastAPI Depends() pattern
  "RUF001",  # ambiguous-unicode-character-string — legitimate in multilingual strings
  "RUF002",  # ambiguous-unicode-character-docstring
  "RUF003",  # ambiguous-unicode-character-comment
  "N814",    # camelcase-imported-as-constant — SQLAlchemy/alembic convention
  "N817",    # camelcase-imported-as-acronym
  "E741",    # ambiguous-variable-name — 'l', 'O' etc used in migrations
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402", "F401", "N806", "UP035", "UP007"]
"app/models/__init__.py" = ["F401", "RUF022"]
"scripts/*" = ["E402", "F401", "F821", "N806"]
"tests/*" = ["E402", "F401", "RUF012", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
norecursedirs = ["tests/load"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
# FastAPI and SQLAlchemy use dynamic attributes that mypy can't resolve
disable_error_code = ["attr-defined", "arg-type", "union-attr", "assignment", "return-value", "has-type", "misc"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "alembic.*"]
ignore_errors = true
